ProjectModel inspected and refactored.